Bug 157966 - "Fit to page" option makes printed formula huge
Summary: "Fit to page" option makes printed formula huge
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2023-10-29 11:24 UTC by Mike Kaganski
Modified: 2023-10-30 15:43 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-10-29 11:24:36 UTC
Since commit bf4bbc3c2174b21577b8878bc3197923ba44a029, opening Print dialog in Math, and selecting "Fit to page" on Math tab, makes the formula huge, only some characters' parts fitting into the printed page.
Comment 1 Commit Notification 2023-10-29 13:28:48 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/81f36caea6acd3042d42625940a9396305f5569c

tdf#157966: fix "Fit to page" printing option

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-10-30 15:43:13 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/79b4fc22792d3fa905579db900315dff22c51b22

tdf#157966: fix "Fit to page" printing option

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.