tdf#157966: fix "Fit to page" printing option

Regression after commit bf4bbc3c2174b21577b8878bc3197923ba44a029
(replace std::max(std::min()) with std::clamp, 2020-11-16).

Change-Id: Iada43ba352cbfb5ea597c72c871b47beb2d766c9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158617
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158649
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>