starmath/source/document.cxx
@@ -1502,7 +1502,7 @@ void SmDocShell::Impl_Print(OutputDevice& rOutDev, const SmPrintUIOptions& rPrin
                     = std::min(o3tl::convert(OutputSize.Width(), 100, GraphicSize.Width()),
                                o3tl::convert(OutputSize.Height(), 100, GraphicSize.Height()));
                 nZ -= 10;
-                Fraction aFraction(std::clamp(nZ, MINZOOM, sal_uInt16(100)), 1);
+                Fraction aFraction(std::clamp(nZ, MINZOOM, MAXZOOM), 100);
 
                 OutputMapMode = MapMode(SmMapUnit(), Point(), aFraction, aFraction);
             }
